--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MoisesBumba/criando-o-meu-site-php#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-ruby-sass": "^3.0.0",
     "gulp-sass": "^3.1.0"
   }
 }
